--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Edit Article</h1>
+<div class="container">
+	<h1>Edit Article</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to "Back", @article %>
+	<%= link_to "Back", articles_path %>
+</div>
