--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,14 @@
-<% @articles.each do |article| %>
-	<h2><%= link_to article.title, article %></h2>
-	<p><%= article.created_at.strftime("%B %d, %Y") %></p>
-<% end %>
+<div class="container">
+	<div class="row">
+		<div class="col-md-offset-4 clearfix">
+			<h2>Articles</h2>
+			<hr>
+			<div class="container">
+				<% @articles.each do |article| %>
+					<h3 class="title"><%= link_to article.title, article %></h3>
+					<p><%= article.created_at.strftime("%B %d, %Y") %></p>
+				<% end %>
+			</div>
+		</div>
+	</div>
+</div>
