--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,12 @@
-<h1><%= @article.title %></h1>
-<p><%= @article.content %></p>
+<div class="container">
+	<h1><%= @article.title %></h1>
+	<p><%= @article.content %></p>
 
-<%= link_to "Back", articles_path %>
-<%= link_to "Edit", edit_article_path %>
-<%= link_to "Destroy", article_path(@article), method: :delete, data: { confirm: "Are you sure?" } %>
+	<div class="btn-group">
+		<%= link_to "Back", articles_path, class: "btn btn-default" %>
+		<% if user_signed_in? %>
+			<%= link_to "Edit", edit_article_path(@article), class: "btn btn-default" %>
+			<%= link_to "Delete", article_path, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default" %>
+		<% end %>
+	</div>
+</div>
