--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,5 +1,11 @@
 <%= simple_form_for(@project, html: { class: 'form-horizontal' }) do |f| %>
-	<%= f.input :title %>
-	<%= f.input :description %>
-	<%= f.button :submit %>
+	<div class="form-group">
+		<%= f.input :title, input_html: { class: 'form-control' } %>
+	</div>
+
+	<div class="form-group">
+		<%= f.input :description, input_html: { class: 'form-control' } %>
+	</div>
+	
+	<%= f.button :submit, class: "btn btn-primary" %>
 <% end %>
