--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Edit Project</h1>
+<div class="container">
+	<h1>Edit Project</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to "Back", @project %>
+	<%= link_to "Back", @project %>
+</div>
