--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,14 @@
-<% @projects.each do |project| %>
-	<h2><%= link_to project.title, project %></h2>
-	<p><%= project.created_at.strftime("%B %d, %Y") %></p>
-<% end %>
+<div class="container">
+	<div class="row">
+		<div class="col-md-offset-4 clearfix">
+			<h2>Projects</h2>
+			<hr>
+			<div class="container">
+				<% @projects.each do |project| %>
+					<h3 class="title"><%= link_to project.title, project %></h3>
+					<p><%= project.created_at.strftime("%B %d, %Y") %></p>
+				<% end %>
+			</div>
+		</div>
+	</div>
+</div>
