--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,12 @@
-<h1><%= @project.title %></h1>
-<p><%= @project.description %></p>
+<div class="container">
+	<h1><%= @project.title %></h1>
+	<p><%= @project.description %></p>
 
-<%= link_to "Back", projects_path %>
-<%= link_to "Edit", edit_project_path %>
-<%= link_to "Destroy", project_path(@project), method: :delete, data: { confirm: "Are you sure?" } %>
+	<div class="btn-group">
+		<%= link_to "Back", projects_path, class: "btn btn-default" %>
+		<% if user_signed_in? %>
+			<%= link_to "Edit", edit_project_path(@project), class: "btn btn-default" %>
+			<%= link_to "Delete", project_path, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default" %>
+		<% end %>
+	</div>
+</div>
