--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,25 @@
 <div class="container">
-	<h1><%= @article.title %></h1>
-	<p><%= @article.content %></p>
+	<div class="row">
+		<div class="col-md-8">
+			<div id="show_title">
+				<h3><%= @article.title %></h3>
+				<hr>
+				<p><%= simple_format(@article.content) %></p>
+			</div>
 
-	<div class="btn-group">
-		<%= link_to "Back", articles_path, class: "btn btn-default" %>
-		<% if user_signed_in? %>
-			<%= link_to "Edit", edit_article_path(@article), class: "btn btn-default" %>
-			<%= link_to "Delete", article_path, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default" %>
-		<% end %>
+			<div class="btn-group">
+				<%= link_to "Back", articles_path, class: "btn btn-default" %>
+				<% if user_signed_in? %>
+					<%= link_to "Edit", edit_article_path(@article), class: "btn btn-default" %>
+					<%= link_to "Delete", article_path, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default" %>
+				<% end %>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<h2>Another Article</h2>
+			<hr>
+			<h3 class="title"><%= link_to @random_article.title, article_path(@random_article) %></h3>
+			<p><%= @article.created_at.strftime("%B %d, %Y") %></p>
+		</div>
 	</div>
 </div>
