--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,12 +1,19 @@
 <div class="container">
-	<h1><%= @project.title %></h1>
-	<p><%= @project.description %></p>
+	<div class="row">
+		<div class="col-md-8">
+			<div id="show_title">
+				<h3><%= @project.title %></h3>
+				<hr>
+				<p><%= simple_format(@project.description) %></p>
+			</div>
 
-	<div class="btn-group">
-		<%= link_to "Back", projects_path, class: "btn btn-default" %>
-		<% if user_signed_in? %>
-			<%= link_to "Edit", edit_project_path(@project), class: "btn btn-default" %>
-			<%= link_to "Delete", project_path, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default" %>
-		<% end %>
+			<div class="btn-group">
+				<%= link_to "Back", projects_path, class: "btn btn-default" %>
+				<% if user_signed_in? %>
+					<%= link_to "Edit", edit_project_path(@project), class: "btn btn-default" %>
+					<%= link_to "Delete", project_path, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default" %>
+				<% end %>
+			</div>
+		</div>
 	</div>
 </div>
