--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,5 +1,9 @@
 <%= simple_form_for(@project, html: { class: 'form-horizontal' }) do |f| %>
 	<div class="form-group">
+		<%= f.input :image %>
+	</div>
+
+	<div class="form-group">
 		<%= f.input :title, input_html: { class: 'form-control' } %>
 	</div>
 
