--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,6 +4,7 @@
 			<div id="show_title">
 				<h3><%= @project.title %></h3>
 				<hr>
+				<%= image_tag @project.image(:thumb) %>
 				<p><%= simple_format(@project.description) %></p>
 			</div>
 
